@@ -5,6 +5,7 @@ import com.englishapp.backend.auth.entity.User;
 import com.englishapp.backend.auth.repository.UserRepository;
 import com.englishapp.backend.common.exception.BadRequestException;
 import com.englishapp.backend.common.exception.NotFoundException;
+import com.englishapp.backend.progress.service.StreakService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -12,7 +13,9 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+
+import java.util.List;
 import java.util.UUID;
 
 @Service
@@ -22,6 +25,7 @@ public class AuthService implements UserDetailsService {
     private final UserRepository userRepository;
     private final PasswordEncoder passwordEncoder;
     private final JwtService jwtService;
+    private final StreakService streakService;
 
     public AuthResponse register(RegisterRequest request) {
         if (userRepository.existsByEmail(request.email())) {
@@ -46,11 +50,11 @@ public class AuthService implements UserDetailsService {
         String token = jwtService.generateToken(user.getEmail());
         return toAuthResponse(token, user);
     }
-
     public ProfileResponse getProfile(String email) {
         User user = findByEmail(email);
         return toProfileResponse(user);
     }
+
 
     public ProfileResponse updateProfile(String email, ProfileUpdateRequest request) {
         User user = findByEmail(email);
@@ -60,12 +64,18 @@ public class AuthService implements UserDetailsService {
         return toProfileResponse(user);
     }
 
-    // Called by other modules (e.g. progress) to credit XP and update streak
-    public void addXp(UUID userId, int amount) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new NotFoundException("User not found"));
-        user.setXp(user.getXp() + amount);
+    public void changePassword(String email, ChangePasswordRequest request) {
+        User user = findByEmail(email);
+        if (!passwordEncoder.matches(request.currentPassword(), user.getPassword())) {
+            throw new BadRequestException("Current password is incorrect");
+        }
+        user.setPassword(passwordEncoder.encode(request.newPassword()));
         userRepository.save(user);
+    }
+
+    // Called by other modules to credit XP and update streak together
+    public void recordActivity(UUID userId, int xpAmount) {
+        streakService.recordActivity(userId, xpAmount);
     }
 
     @Override
@@ -74,7 +84,7 @@ public class AuthService implements UserDetailsService {
         return new org.springframework.security.core.userdetails.User(
                 user.getEmail(),
                 user.getPassword(),
-                Collections.emptyList()
+                List.of(new SimpleGrantedAuthority(user.getRole().name()))
         );
     }
 
@@ -82,14 +92,17 @@ public class AuthService implements UserDetailsService {
         return userRepository.findByEmail(email)
                 .orElseThrow(() -> new NotFoundException("User not found"));
     }
+    private ProfileResponse toProfileResponse(User user) {
+        return new ProfileResponse(user.getId(), user.getEmail(), user.getDisplayName(),
+                user.getAvatarUrl(), user.getXp(), user.getStreakDays(), user.getCreatedAt());
+    }
+
+
 
     private AuthResponse toAuthResponse(String token, User user) {
         return new AuthResponse(token, user.getId(), user.getEmail(),
                 user.getDisplayName(), user.getAvatarUrl(), user.getXp(), user.getStreakDays());
     }
 
-    private ProfileResponse toProfileResponse(User user) {
-        return new ProfileResponse(user.getId(), user.getEmail(), user.getDisplayName(),
-                user.getAvatarUrl(), user.getXp(), user.getStreakDays(), user.getCreatedAt());
-    }
+
 }
